<resources>
    <string name="app_name">Basic Needs</string>
    <string name="title_home">Home</string>
    <string name="title_product">Product</string>
    <string name="title_profile">Profile</string>
    <string name="title_outlet">Outlet</string>
    <string name="enter_outlet_name">Enter Outlet Name</string>
    <string name="enter_person_name">Enter Person Name</string>
    <string name="enter_contact_number">Enter Contact Number</string>
    <string name="enter_gst_number">Enter GST Number</string>
    <string name="enter_bach_number">Enter Bach Number</string>
    <string name="enter_primary_address">Enter Primary Address</string>
    <string name="enter_pin_code">Enter Pin Code</string>
    <string name="enter_secondary_address">Enter Secondary Address</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_password">Enter Password</string>
    <string name="register">Register</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="add_outlet">Add Outlet</string>
</resources>